--- a/eval.html
+++ b/eval.html
@@ -51,32 +51,6 @@
                             <ul>
                                 <li>
                                     <div class="item-content">
-                                        <div class="item-inner not-empty-state">
-                                            <div class="item-title label">
-                                                Attendance
-                                            </div>
-                                            <div class="item-input item-input-field not-empty-state">
-                                                <select id="attendance" class="not-empty-state">
-                                                    <option>Present</option>
-                                                    <option>Late</option>
-                                                    <option>Absent</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="align-top">
-                                    <div class="item-content">
-                                        <div class="item-media"><i class="icon icon-form-comment"></i></div>
-                                        <div class="item-inner">
-                                            <div class="item-input item-input-field">
-                                                <textarea id="attendanceCmt" class="resizable"></textarea>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="item-content">
                                         <div class="item-inner">
                                             <div id="abilityTitle" class="item-title label">
                                                 Ability: 3
@@ -113,7 +87,74 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li>
+								
+								<li>
+      <label class="label-radio item-content">
+        <!-- Checked by default -->
+        <input type="radio" name="attendance" value="Present" checked="checked" id="Present">
+        <div class="item-media">
+          <i class="icon icon-form-radio"></i>
+        </div>
+        <div class="item-inner">
+          <div class="item-title">Present</div>
+        </div>
+      </label>
+    </li>
+
+    <li>
+      <label class="label-radio item-content">
+        <input type="radio" name="attendance" value="Late" id="Late">
+        <div class="item-media">
+          <i class="icon icon-form-radio"></i>
+        </div>
+        <div class="item-inner">
+          <div class="item-title">Late</div>
+        </div>
+      </label>
+    </li>
+	
+	 <li>
+      <label class="label-radio item-content">
+        <input type="radio" name="attendance" value="Absent" id="Absent">
+        <div class="item-media">
+          <i class="icon icon-form-radio"></i>
+        </div>
+        <div class="item-inner">
+          <div class="item-title">Absent</div>
+        </div>
+      </label>
+    </li>
+	
+	
+								<!--
+								<li>
+                                    <div class="item-content">
+                                        <div class="item-inner not-empty-state">
+                                            <div class="item-title label">
+                                                Attendance
+                                            </div>
+                                            <div class="item-input item-input-field not-empty-state">
+                                                <select id="attendance" class="not-empty-state">
+                                                    <option>Present</option>
+                                                    <option>Late</option>
+                                                    <option>Absent</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>  -->
+                                </li>
+                                <li class="align-top">
+                                    <div class="item-content">
+                                        <div class="item-media"><i class="icon icon-form-comment"></i></div>
+                                        <div class="item-inner">
+                                            <div class="item-input item-input-field">
+                                                <textarea id="attendanceCmt" class="resizable"></textarea>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>								
+                                
+								<li>
                                     <div class="item-content" id="gameSenseDiv" style="display: none">
                                         <div class="item-inner">
                                             <div id="gameSenseTitle" class="item-title label">
